# thermal_conductivity_2D

./: .gitignore  CMakeLists.txt  README.md  config.cpp  config.h  create_gif.py  generate_field.cpp  hot_middle__cold_rest.txt  hot_right_top__cold_rest.txt  hot_top__cold_down_and_middle.txt  hot_top__cold_rest.txt  main.cpp  my_queue.h  visualization.cpp  visualization.h
